--- a/wp-content/themes/twentytwenty/style.css
+++ b/wp-content/themes/twentytwenty/style.css
@@ -6378,7 +6378,7 @@ a.to-the-top > * {
 
 	.wp-block-separator.is-style-wide {
 		max-width: 120rem;
-		width: 120rem;
+		width: 100%;
 	}
 
 	/* Entry Content ------------------------- */
